--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #00f7ffee;
     --second-color: #b6895b;
-    --bg: #010101de;
+    --bg: #010101ff;
 }
 
 * {
@@ -17,6 +17,7 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: var(--bg);
     color: #fff;
+    min-height: 2000px
 
 }
 
@@ -30,7 +31,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: rgba(1, 1, 1, 0.6);
+    background-color: rgba(1, 1, 1, 0.9);
     border-bottom: 1px solid var(--primary-color);
     z-index: 1000;
     position: fixed;
@@ -100,10 +101,81 @@ body {
     cursor: pointer;
 }
 
+/* Hero Section */
+.hero {
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    background-image: url('../img/2.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.hero::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    bottom: 0;
+    background: linear-gradient(0deg, rgba(1,1,3,1) 8%, rgba(255,255,255,0) 50%)
+}
+
+.hero .content {
+    padding: 1.4rem;
+    max-width: 60rem;
+}
+
+.hero .content h1 {
+    font-size: 5em;
+    color: #fff;
+    text-shadow: 5px 5px 3px rgba(1,1,3,0.5);
+    line-height: 1.2;
+}
+
+.hero .content h1 span {
+    color: var(--primary-color)
+}
+
+.hero .content p {
+    font-size: 1.6rem;
+    margin-top: 0.5rem;
+    line-height: 1.4;
+    font-weight: 100;
+    text-shadow: 5px 5px 3px rgba(1,1,3,0.5);
+    mix-blend-mode: difference;
+}
+
+.hero .content .cta {
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    font-size: 1.4rem;
+    color: #fff;
+    background-color: var(--second-color);
+    border-radius: 0.5em;
+}
 
 
+/* About Section */
+.about {
+    padding: 7rem 7% 1.4rem;
+}
 
+.about h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+}
 
+.about h2 span {
+    color: var(--primary-color)
+}
+
+.about .row .about-img img {
+    width: 500px;
+}
 
 
 
@@ -124,7 +196,34 @@ body {
     }
     #hamburger-menu {
     display: inline-block;
-}
+    }
+    .navbar .navbar-nav {
+        position: absolute;
+        top: 100%;
+        right: -100%;
+        height: 100vh;
+        background-color: #fff;
+        width: 30rem;
+        transition: 0.6s;
+    }
+
+    .navbar .navbar-nav.active {
+        right: 0;
+    }
+
+    .navbar .navbar-nav a {
+        color: var(--bg);
+        display: block;
+        margin: 1.5rem;
+        padding: 0.5rem;
+        font-size: 2rem;
+    }
+
+    .navbar .navbar-nav a:hover::after {
+        transform-origin: scale(0.2);
+    }
+
+
 }
 
 /* Handphone */
