--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,26 @@
 :root {
-    --primary-color: #00f7ffee;
-    --second-color: #b6895b;
+    --primary: #00f7ffee;
+    --second: #b6895b;
     --bg: #010101ff;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: none;
-    border: none;
-    text-decoration: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: none;
+  border: none;
+  text-decoration: none;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background-color: var(--bg);
-    color: #fff;
-    min-height: 2000px
-
+  font-family: 'Poppins', sans-serif;
+  background-color: var(--bg);
+  color: #fff;
 }
 
 /* navbar ini wok */
@@ -32,7 +34,7 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: rgba(1, 1, 1, 0.9);
-    border-bottom: 1px solid var(--primary-color);
+    border-bottom: 1px solid var(--primary);
     z-index: 1000;
     position: fixed;
     top: 0;
@@ -48,7 +50,7 @@ body {
 }
 
 .navbar .navbar-logo span {
-    color: var(--second-color);
+    color: var(--second);
 }
 
 .navbar .navbar-nav a {
@@ -60,7 +62,7 @@ body {
 }
 
 .navbar .navbar-nav a:hover {
-    color: var(--primary-color);
+    color: var(--primary);
     transform: scale(1.1);
 }
 
@@ -68,7 +70,7 @@ body {
     display: block;
     content: '';
     padding-bottom: 5px;
-    border-bottom: 3px solid var(--primary-color);
+    border-bottom: 3px solid var(--primary);
     transform: scaleX(0);
     transition: transform 250ms ease-in-out;
 }
@@ -85,7 +87,7 @@ body {
 }
 
 .navbar .navbar-extra a:hover {
-    color: var(--primary-color);
+    color: var(--primary);
     transform: scale(1.1);
 }
 
@@ -103,14 +105,18 @@ body {
 
 /* Hero Section */
 .hero {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    background-image: url('../img/2.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  min-height: 110vh;
+  display: flex;
+  align-items: center;
+  background-image: url('../img/2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 65%, rgba(0, 0, 0, 0));
 }
+
 
 .hero::after {
     content: '';
@@ -121,6 +127,19 @@ body {
     bottom: 0;
     background: linear-gradient(0deg, rgba(1,1,3,1) 8%, rgba(255,255,255,0) 50%)
 }
+
+.hero a{
+    display: inline-block;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
+    color: #fff;
+    background-color: var(--primary);
+    border-radius: 0.5em;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
 
 .hero .content {
     padding: 1.4rem;
@@ -135,7 +154,7 @@ body {
 }
 
 .hero .content h1 span {
-    color: var(--primary-color)
+    color: var(--primary)
 }
 
 .hero .content p {
@@ -148,13 +167,19 @@ body {
 }
 
 .hero .content .cta {
-    margin-top: 1rem;
     display: inline-block;
-    padding: 1rem 3rem;
-    font-size: 1.4rem;
+    padding: 1rem 2rem;
+    font-size: 1.2rem;
     color: #fff;
-    background-color: var(--second-color);
+    background-color: var(--primary);
     border-radius: 0.5em;
+    border: none;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+.hero .content .cta:hover {
+        background-color: var(--second);
 }
 
 
@@ -170,12 +195,100 @@ body {
 }
 
 .about h2 span {
-    color: var(--primary-color)
+    color: var(--primary)
+}
+
+.about .row .content .kata-dia {
+  text-align: justify;
+}
+
+.about .row .about-img {
+    flex: 1 1 45rem;
 }
 
 .about .row .about-img img {
-    width: 500px;
+  width: 100%;
 }
+
+.about .row {
+  display: flex;
+}
+
+.about .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem
+}
+
+.about .row .content span {
+  color: deeppink;
+}
+
+.about .row h3 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.about .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  line-height: 1.5;
+}
+
+
+/* MyFavorite Section */
+.favorite {
+    padding: 7rem 7% 1.4rem;
+}
+
+.favorite h2 {
+    text-align: center;
+    font-size: 2.5rem;
+    margin-bottom: 3rem;
+}
+
+.favorite h2 span {
+    color: var(--primary)
+}
+
+.favorite .row .content .kata-dia {
+  text-align: justify;
+}
+
+.favorite .row .about-img {
+    flex: 1 1 45rem;
+}
+
+.favorite .row .about-img img {
+  width: 100%;
+}
+
+.favorite .row {
+  display: flex;
+}
+
+.favorite .row .content {
+  flex: 1 1 35rem;
+  padding: 0 1rem
+}
+
+.favorite .row .content span {
+  color: deeppink;
+}
+
+.favorite .row h3 {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
+}
+
+.favorite .row .content p {
+  margin-bottom: 0.8rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  line-height: 1.5;
+}
+
+
 
 
 
@@ -190,48 +303,97 @@ body {
 /* Media Queries */
 
 /* Tablet */
-@media(max-width: 768px) {
-    html {
-        font-size: 62.5%
-    }
-    #hamburger-menu {
+@media (max-width: 758px) {
+  html {
+    font-size: 62.5%;
+  }
+
+  #hamburger-menu {
     display: inline-block;
-    }
-    .navbar .navbar-nav {
-        position: absolute;
-        top: 100%;
-        right: -100%;
-        height: 100vh;
-        background-color: #fff;
-        width: 30rem;
-        transition: 0.6s;
-    }
+  }
 
-    .navbar .navbar-nav.active {
-        right: 0;
-    }
+  .navbar .navbar-nav {
+    position: absolute;
+    top: 100%;
+    right: -100%;
+    background-color: #fff;
+    width: 30rem;
+    height: 100vh;
+    transition: 0.3s;
+  }
 
-    .navbar .navbar-nav a {
-        color: var(--bg);
-        display: block;
-        margin: 1.5rem;
-        padding: 0.5rem;
-        font-size: 2rem;
-    }
+  .navbar .navbar-nav.active {
+    right: 0;
+  }
 
-    .navbar .navbar-nav a:hover::after {
-        transform-origin: scale(0.2);
-    }
+  .navbar .navbar-nav a {
+    color: var(--bg);
+    display: block;
+    margin: 1.5rem;
+    padding: 0.5rem;
+    font-size: 2rem;
+  }
 
+  .navbar .navbar-nav a::after {
+    transform-origin: 0 0;
+  }
 
+  .navbar .navbar-nav a:hover::after {
+    transform: scaleX(0.2);
+  }
+
+  .navbar .search-form {
+    width: 90%;
+    right: 2rem;
+  }
+
+  .about .row {
+    flex-wrap: wrap;
+  }
+
+  .about .row .about-img img {
+    height: 24rem;
+    object-fit: cover;
+    object-position: center;
+  }
+
+  .about .row .content {
+    padding: 0;
+  }
+
+  .about .row .content h3 {
+    margin-top: 1rem;
+    font-size: 2rem;
+  }
+
+  .about .row .content p {
+    font-size: 1.6rem;
+  }
+
+  .menu p {
+    font-size: 1.2rem;
+  }
+
+  .contact .row {
+    flex-wrap: wrap;
+  }
+
+  .contact .row .map {
+    height: 30rem;
+  }
+
+  .contact .row form {
+    padding-top: 0;
+  }
+
+  .modal-content {
+    flex-wrap: wrap;
+  }
 }
 
-/* Handphone */
-@media(max-width: 480px) {
-    html {
-        font-size: 55%;
-    }
-    #hamburger-menu {
-    display: inline-block;
-}
+/* Mobile Phone */
+@media (max-width: 450px) {
+  html {
+    font-size: 55%;
+  }
 }
